# nof1-tracker

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  switch-to-season-2.sh
.claude/: config.json  mcp-servers.json
.claude/commands/: db:backup-restore.md
.claude/epics/nof1-tracker-foundation-prd/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  3-analysis.md  3.md  4-analysis.md  4.md  5.md  6-analysis.md  6.md  7-analysis.md  7.md  8-analysis.md  8.md  9-analysis.md  9.md  epic.md
.claude/epics/nof1-tracker-foundation-prd/updates/3/: stream-1.md
.claude/epics/nof1-tracker-foundation-prd/updates/4/: stream-1.md
.claude/epics/nof1-tracker-foundation-prd/updates/5/: stream-A.md
.claude/epics/nof1-tracker-foundation-prd/updates/6/: stream-A.md
.claude/epics/nof1-tracker-foundation-prd/updates/7/: stream-A.md
.claude/epics/nof1-tracker-foundation-prd/updates/8/: stream-A.md
.claude/epics/nof1-tracker-foundation-prd/updates/9/: stream-A.md
.claude/prds/: nof1-tracker-foundation-prd.md
.claude/rules-archive/: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: DATABASE.md
migrations/: env.py  script.py.mako
migrations/init/: 001_init.sql
migrations/versions/: 001_initial_schema.py  002_add_season_to_trades_and_chats.py
src/nof1_tracker/: __init__.py  cli.py  main.py
src/nof1_tracker/analyzer/: __init__.py
src/nof1_tracker/database/: __init__.py  config.py  connection.py  models.py
src/nof1_tracker/scraper/: __init__.py  __main__.py  base.py  leaderboard.py  models.py  persistence.py  runner.py
tests/: __init__.py  conftest.py  test_cli.py  test_docker_setup.py  test_fixtures.py  test_project_structure.py
tests/test_database/: __init__.py  test_config.py  test_connection.py  test_migrations.py  test_models.py
tests/test_scraper/: __init__.py  test_scraper.py
